--- a/WebQLDaoTao/Site.Master
+++ b/WebQLDaoTao/Site.Master
@@ -10,65 +10,76 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
-/* Set black background color, white text and some padding */
-    footer {
-    background-color: #555;
-    color: white;
-    padding: 15px;
-}
-</style>
+        /* Set black background color, white text and some padding */
+        footer {
+            background-color: #555;
+            color: white;
+            padding: 15px;
+        }
+    </style>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
         <nav class="navbar navbar-inverse">
-<div class="container-fluid">
-<div class="navbar-header">
-<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar">
-<span class="sr-only">Toggle navigation</span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-<span class="icon-bar"></span>
-</button>
-<a class="navbar-brand" href="#">WebDaoTao</a>
-</div>
-<div class="collapse navbar-collapse" id="myNavbar">
-<ul class="nav navbar-nav">
-<li class="active"><a href="Default.aspx">Trang chủ</a></li>
-<li class="dropdown">
-<a class="dropdown-toggle" data-toggle="dropdown" href="#">Danh mục
-<span class="caret"></span></a>
-<ul class="dropdown-menu">
-<li><a href="QLMonHoc.aspx">Môn học</a></li>
-<li><a href="QLKhoa.aspx">Khoa</a></li>
-<li><a href="QLSinhVien.aspx">Sinh viên</a></li>
-</ul>
-</li>
-<li><a href="QLDiemThi.aspx">Quản lý điểm thi</a></li>
-</ul>
-</div>
-</div>
-</nav>
-<div class="container" style="min-height: 600px; padding: 5px">
-<div class="row">
-<div class="col-md-3">
-<div class="list-group">
-<a href="#" class="list-group-item active">CHỨC NĂNG CHÍNH</a>
-<a href="QLMonHoc.aspx" class="list-group-item"><i class="bi bi-card-checklist"></i> Quản lý môn học</a>
-<a href="QLKhoa.aspx" class="list-group-item"><span class="glyphicon glyphicon-book"></span> Quản lý khoa</a>
-<a href="QLSinhVien.aspx" class="list-group-item"><span class="glyphicon glyphicon-user"></span> Quản lý sinh viên</a>
-<a href="QLDiemThi.aspx" class="list-group-item"><span class="glyphicon glyphicon-edit"></span> Quản lý điểm</a>
-</div>
-</div>
-<div class="col-md-9">
-<asp:ContentPlaceHolder ID="Main" runat="server">
-</asp:ContentPlaceHolder>
-</div>
-</div>
-        <footer class="container-fluid text-center">
-    <p>Sinh thực hiện: 2321160040 - Quang Nha</p>
-    </footer>
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">WebDaoTao</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="Default.aspx">Trang chủ</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Danh mục
+                                <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="QLMonHoc.aspx">Môn học</a></li>
+                                <li><a href="QLKhoa.aspx">Khoa</a></li>
+                                <li><a href="QLSinhVien.aspx">Sinh viên</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="QLDiemThi.aspx">Quản lý điểm thi</a></li>
+                    </ul>
+                    <!-- ✅ Nút Đăng xuất bên phải -->
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <asp:Label ID="lblUser" runat="server" CssClass="navbar-text"></asp:Label>
+                        </li>
+                        <li>
+                            <asp:LinkButton ID="btnLogout" runat="server" OnClick="btnLogout_Click" CssClass="btn btn-danger navbar-btn">
+                <span class="glyphicon glyphicon-log-out"></span> Đăng xuất
+            </asp:LinkButton>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container" style="min-height: 600px; padding: 5px">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="list-group">
+                        <a href="#" class="list-group-item active">CHỨC NĂNG CHÍNH</a>
+                        <a href="QLMonHoc.aspx" class="list-group-item"><i class="bi bi-card-checklist"></i>Quản lý môn học</a>
+                        <a href="QLKhoa.aspx" class="list-group-item"><span class="glyphicon glyphicon-book"></span>Quản lý khoa</a>
+                        <a href="QLSinhVien.aspx" class="list-group-item"><span class="glyphicon glyphicon-user"></span>Quản lý sinh viên</a>
+                        <a href="QLDiemThi.aspx" class="list-group-item"><span class="glyphicon glyphicon-edit"></span>Quản lý điểm</a>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <asp:ContentPlaceHolder ID="Main" runat="server">
+                    </asp:ContentPlaceHolder>
+                </div>
+            </div>
+            <footer class="container-fluid text-center">
+                <p>Sinh thực hiện: 2321160040 - Quang Nha</p>
+            </footer>
     </form>
 </body>
 </html>
